@@ -9,7 +9,7 @@ of the License, or (at your option) any later version.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 
 See the GNU General Public License for more details.
 
@@ -31,10 +31,10 @@ struct model_s* gun_model;
 
 //=============
 
-cvar_t*			crosshair;
+cvar_t* crosshair;
 
-extern cvar_t*	vid_hudscale;
-extern cvar_t*	viewsize;
+extern cvar_t* vid_hudscale;
+extern cvar_t* viewsize;
 
 int32_t 		r_numdlights;
 dlight_t		r_dlights[MAX_DLIGHTS];
@@ -54,10 +54,10 @@ int32_t			num_cl_weaponmodels;
 ====================
 V_ClearScene
 
-Clears the scene of all entities, dynamic lights and particles 
+Clears the scene of all entities, dynamic lights and particles
 ====================
 */
-void Render3D_ClearScene ()
+void Render3D_ClearScene()
 {
 	r_numdlights = 0;
 	r_numentities = 0;
@@ -71,7 +71,7 @@ V_AddEntity
 Adds an entity.
 =====================
 */
-void Render3D_AddEntity (entity_t *ent)
+void Render3D_AddEntity(entity_t* ent)
 {
 	if (r_numentities >= MAX_ENTITIES)
 	{
@@ -88,9 +88,9 @@ V_AddParticle
 
 =====================
 */
-void Render3D_AddParticle (vec3_t org, color4_t color)
+void Render3D_AddParticle(vec3_t org, color4_t color)
 {
-	particle_t	*p;
+	particle_t* p;
 
 	if (r_numparticles >= MAX_PARTICLES)
 	{
@@ -114,7 +114,7 @@ V_AddLight
 
 =====================
 */
-void Render3D_AddLight (vec3_t org, float intensity, float r, float g, float b)
+void Render3D_AddLight(vec3_t org, float intensity, float r, float g, float b)
 {
 	dlight_t* dl;
 
@@ -125,7 +125,7 @@ void Render3D_AddLight (vec3_t org, float intensity, float r, float g, float b)
 	}
 
 	dl = &r_dlights[r_numdlights++];
-	VectorCopy (org, dl->origin);
+	VectorCopy(org, dl->origin);
 	dl->intensity = intensity;
 	dl->color[0] = r;
 	dl->color[1] = g;
@@ -139,16 +139,16 @@ V_AddLightStyle
 
 =====================
 */
-void Render3D_AddLightStyle (int32_t style, float r, float g, float b)
+void Render3D_AddLightStyle(int32_t style, float r, float g, float b)
 {
-	lightstyle_t	*ls;
+	lightstyle_t* ls;
 
 	if (style < 0 || style > MAX_LIGHTSTYLES)
-		Com_Error (ERR_DROP, "Bad light style %i", style);
+		Com_Error(ERR_DROP, "Bad light style %i", style);
 
 	ls = &r_lightstyles[style];
 
-	ls->white = r+g+b;
+	ls->white = r + g + b;
 	ls->rgb[0] = r;
 	ls->rgb[1] = g;
 	ls->rgb[2] = b;
@@ -161,107 +161,109 @@ CL_PrepRefresh
 Call before entering a new level, or after changing dlls
 =================
 */
-void Render3D_PrepRefresh ()
+void Render3D_PrepRefresh()
 {
-	char		mapname[32];
-	int32_t 		i;
-	char		name[MAX_QPATH];
-	float		rotate;
-	vec3_t		axis;
+	char	mapname[32];
+	int32_t i;
+	char	name[MAX_QPATH];
+	float	rotate;
+	vec3_t	axis;
 
-	if (!cl.configstrings[CS_MODELS+1][0])
+	if (!cl.configstrings[CS_MODELS + 1][0])
 		return;		// no map loaded
 
-	Render2D_AddDirtyPoint (0, 0);
-	Render2D_AddDirtyPoint (gl_width->value-1, gl_height->value-1);
+	Render2D_AddDirtyPoint(0, 0);
+	Render2D_AddDirtyPoint(gl_width->value - 1, gl_height->value - 1);
 
 	// let the render dll load the map
-	strcpy (mapname, cl.configstrings[CS_MODELS+1] + 5);	// skip "maps/"
-	mapname[strlen(mapname)-4] = 0;		// cut off ".bsp"
+	strcpy(mapname, cl.configstrings[CS_MODELS + 1] + 5);	// skip "maps/"
+	mapname[strlen(mapname) - 4] = 0;		// cut off ".bsp"
 
 	// register models, pics, and skins
-	Com_Printf ("Map: %s\r", mapname); 
-	Render_UpdateScreen ();
-	re.BeginRegistration (mapname);
-	Com_Printf ("                                     \r");
+	Com_Printf("Map: %s\r", mapname);
+	Render_UpdateScreen();
+	re.BeginRegistration(mapname);
+	Com_Printf("                                     \r");
 
 	// precache status bar pics
-	Com_Printf ("pics\r"); 
-	Render_UpdateScreen ();
-	Render2D_TouchPics ();
-	Com_Printf ("                                     \r");
+	Com_Printf("pics\r");
+	Render_UpdateScreen();
+	Render2D_TouchPics();
+	Com_Printf("                                     \r");
 
-	CL_RegisterTEntModels ();
+	CL_RegisterTEntModels();
 
 	num_cl_weaponmodels = 1;
 	strcpy(cl_weaponmodels[0], "weapon.md2");
 
-	
-	for (i=1 ; i<MAX_MODELS && cl.configstrings[CS_MODELS+i][0] ; i++)
+
+	for (i = 1; i < MAX_MODELS && cl.configstrings[CS_MODELS + i][0]; i++)
 	{
-		strcpy (name, cl.configstrings[CS_MODELS+i]);
+		strcpy(name, cl.configstrings[CS_MODELS + i]);
 		name[37] = 0;	// never go beyond one line
 		if (name[0] != '*')
-			Com_Printf ("%s\r", name); 
-		Render_UpdateScreen ();
+			Com_Printf("%s\r", name);
+		Render_UpdateScreen();
 		if (name[0] == '#')
 		{
 			// special player weapon model
 			if (num_cl_weaponmodels < MAX_CLIENTWEAPONMODELS)
 			{
-				strncpy(cl_weaponmodels[num_cl_weaponmodels], cl.configstrings[CS_MODELS+i]+1,
+				strncpy(cl_weaponmodels[num_cl_weaponmodels], cl.configstrings[CS_MODELS + i] + 1,
 					sizeof(cl_weaponmodels[num_cl_weaponmodels]) - 1);
 				num_cl_weaponmodels++;
 			}
-		} 
+		}
 		else
 		{
-			cl.model_draw[i] = re.RegisterModel (cl.configstrings[CS_MODELS+i]);
+			cl.model_draw[i] = re.RegisterModel(cl.configstrings[CS_MODELS + i]);
 			if (name[0] == '*')
-				cl.model_clip[i] = Map_LoadInlineModel (cl.configstrings[CS_MODELS+i]);
+				cl.model_clip[i] = Map_LoadInlineModel(cl.configstrings[CS_MODELS + i]);
 			else
 				cl.model_clip[i] = NULL;
 		}
+
 		if (name[0] != '*')
-			Com_Printf ("                                     \r");
-	}
-	
-	Com_Printf ("images\r", i); 
-	Render_UpdateScreen ();
-	for (i=1 ; i<MAX_IMAGES && cl.configstrings[CS_IMAGES+i][0] ; i++)
-	{
-		cl.image_precache[i] = re.RegisterPic (cl.configstrings[CS_IMAGES+i]);
-	}
-	
-	Com_Printf ("                                     \r");
-	for (i=0 ; i<MAX_CLIENTS ; i++)
-	{
-		if (!cl.configstrings[CS_PLAYERSKINS+i][0])
-			continue;
-		Com_Printf ("client %i\r", i); 
-		Render_UpdateScreen ();
-		CL_ParseClientinfo (i);
-		Com_Printf ("                                     \r");
+			Com_Printf("                                     \r");
 	}
 
-	CL_LoadClientinfo (&cl.baseclientinfo, "unnamed\\male/grunt");
+	Com_Printf("images\r", i);
+	Render_UpdateScreen();
+
+	for (i = 1; i < MAX_IMAGES && cl.configstrings[CS_IMAGES + i][0]; i++)
+	{
+		cl.image_precache[i] = re.RegisterPic(cl.configstrings[CS_IMAGES + i]);
+	}
+
+	Com_Printf("                                     \r");
+	for (i = 0; i < MAX_CLIENTS; i++)
+	{
+		if (!cl.configstrings[CS_PLAYERSKINS + i][0])
+			continue;
+		Com_Printf("client %i\r", i);
+		Render_UpdateScreen();
+		CL_ParseClientinfo(i);
+		Com_Printf("                                     \r");
+	}
+
+	CL_LoadClientinfo(&cl.baseclientinfo, "unnamed\\male/grunt");
 
 	// set sky textures and speed
-	Com_Printf ("sky\r", i); 
-	Render_UpdateScreen ();
-	rotate = atof (cl.configstrings[CS_SKYROTATE]);
-	sscanf (cl.configstrings[CS_SKYAXIS], "%f %f %f", 
+	Com_Printf("sky\r", i);
+	Render_UpdateScreen();
+	rotate = atof(cl.configstrings[CS_SKYROTATE]);
+	sscanf(cl.configstrings[CS_SKYAXIS], "%f %f %f",
 		&axis[0], &axis[1], &axis[2]);
-	re.SetSky (cl.configstrings[CS_SKY], rotate, axis);
-	Com_Printf ("                                     \r");
+	re.SetSky(cl.configstrings[CS_SKY], rotate, axis);
+	Com_Printf("                                     \r");
 
 	// the renderer can now free unneeded stuff
-	re.EndRegistration ();
+	re.EndRegistration();
 
 	// clear any lines of console text
-	Con_ClearNotify ();
+	Con_ClearNotify();
 
-	Render_UpdateScreen ();
+	Render_UpdateScreen();
 	cl.refresh_prepped = true;
 	cl.force_refdef = true;	// make sure we have a valid refdef
 
@@ -275,21 +277,21 @@ void Render3D_PrepRefresh ()
 CalcFov
 ====================
 */
-float Render3D_CalcFov (float fov_x, float width, float height)
+float Render3D_CalcFov(float fov_x, float width, float height)
 {
 	float	a;
 	float	x;
 
 	if (fov_x < 1 || fov_x > 179)
-		Com_Error (ERR_DROP, "Bad fov: %f", fov_x);
+		Com_Error(ERR_DROP, "Bad fov: %f", fov_x);
 
 	// calculate 4:3 fov 
 
-	x = width/tan(fov_x/360*M_PI);
+	x = width / tan(fov_x / 360 * M_PI);
 
-	a = atan (height/x);
+	a = atan(height / x);
 
-	a = a*360/M_PI;
+	a = a * 360 / M_PI;
 
 	// adapt to current aspect ratio (i stole this code from yamagi quake2)
 
@@ -301,21 +303,21 @@ float Render3D_CalcFov (float fov_x, float width, float height)
 //============================================================================
 
 // gun frame debugging functions
-void Render3D_Gun_Next_f ()
+void Render3D_Gun_Next_f()
 {
 	gun_frame++;
-	Com_Printf ("frame %i\n", gun_frame);
+	Com_Printf("frame %i\n", gun_frame);
 }
 
-void Render3D_Gun_Prev_f ()
+void Render3D_Gun_Prev_f()
 {
 	gun_frame--;
 	if (gun_frame < 0)
 		gun_frame = 0;
-	Com_Printf ("frame %i\n", gun_frame);
+	Com_Printf("frame %i\n", gun_frame);
 }
 
-void Render3D_Gun_Model_f ()
+void Render3D_Gun_Model_f()
 {
 	char	name[MAX_QPATH];
 
@@ -324,8 +326,8 @@ void Render3D_Gun_Model_f ()
 		gun_model = NULL;
 		return;
 	}
-	Com_sprintf (name, sizeof(name), "models/%s/tris.md2", Cmd_Argv(1));
-	gun_model = re.RegisterModel (name);
+	Com_sprintf(name, sizeof(name), "models/%s/tris.md2", Cmd_Argv(1));
+	gun_model = re.RegisterModel(name);
 }
 
 /*
@@ -336,7 +338,7 @@ V_RenderView
 */
 void Render3D_RenderView()
 {
-	extern int32_t CompareEntities( const entity_t *, const entity_t * );
+	extern int32_t CompareEntities(const entity_t*, const entity_t*);
 
 	if (cls.state != ca_active)
 	{
@@ -353,37 +355,37 @@ void Render3D_RenderView()
 	if (cl_timedemo->value)
 	{
 		if (!cl.timedemo_start)
-			cl.timedemo_start = Sys_Milliseconds ();
+			cl.timedemo_start = Sys_Milliseconds();
 		cl.timedemo_frames++;
 	}
 
 	// an invalid frame will just use the exact previous refdef
 	// we can't use the old frame if the video mode has changed, though...
-	if ( cl.frame.valid && (cl.force_refdef || !cl_paused->value || viewsize->modified) )
+	if (cl.frame.valid && (cl.force_refdef || !cl_paused->value || viewsize->modified))
 	{
 		cl.force_refdef = false;
 		viewsize->modified = false;
 
-		Render3D_ClearScene ();
+		Render3D_ClearScene();
 
 		// build a refresh entity list and calc cl.sim*
 		// this also calls CL_CalcViewValues which loads
 		// v_forward, etc.
-		CL_AddEntities ();
+		CL_AddEntities();
 
 		// never let it sit exactly on a node line, because a water plane can
 		// dissapear when viewed with the eye exactly on it.
 		// the server protocol only specifies to 1/8 pixel, so add 1/16 in each axis
-		cl.refdef.vieworg[0] += 1.0/16;
-		cl.refdef.vieworg[1] += 1.0/16;
-		cl.refdef.vieworg[2] += 1.0/16;
+		cl.refdef.vieworg[0] += 1.0 / 16;
+		cl.refdef.vieworg[1] += 1.0 / 16;
+		cl.refdef.vieworg[2] += 1.0 / 16;
 
 		cl.refdef.x = scr_vrect.x;
 		cl.refdef.y = scr_vrect.y;
 		cl.refdef.width = scr_vrect.width;
 		cl.refdef.height = scr_vrect.height;
-		cl.refdef.fov_y = Render3D_CalcFov (cl.refdef.fov_x, cl.refdef.width, cl.refdef.height);
-		cl.refdef.time = cl.time*0.001;
+		cl.refdef.fov_y = Render3D_CalcFov(cl.refdef.fov_x, cl.refdef.width, cl.refdef.height);
+		cl.refdef.time = cl.time * 0.001;
 
 		cl.refdef.areabits = cl.frame.areabits;
 
@@ -398,7 +400,7 @@ void Render3D_RenderView()
 
 		if (!cl_add_blend->value)
 		{
-			VectorClear (cl.refdef.blend);
+			VectorClear(cl.refdef.blend);
 		}
 
 		cl.refdef.num_entities = r_numentities;
@@ -412,31 +414,33 @@ void Render3D_RenderView()
 		cl.refdef.rdflags = cl.frame.playerstate.rdflags;
 
 		// sort entities for better cache locality
-        qsort( cl.refdef.entities, cl.refdef.num_entities, sizeof( cl.refdef.entities[0] ), (int32_t (*)(const void *, const void *))CompareEntities );
+		qsort(cl.refdef.entities, cl.refdef.num_entities, sizeof(cl.refdef.entities[0]), (int32_t(*)(const void*, const void*))CompareEntities);
 	}
 
-	re.RenderFrame (&cl.refdef);
-	if ( log_stats->value && ( log_stats_file != 0 ) )
-		fprintf( log_stats_file, "%i,%i,%i,",r_numentities, r_numdlights, r_numparticles);
+	re.RenderFrame(&cl.refdef);
+	if (log_stats->value && (log_stats_file != 0))
+		fprintf(log_stats_file, "%i,%i,%i,", r_numentities, r_numdlights, r_numparticles);
 
 
-	Render2D_AddDirtyPoint (scr_vrect.x, scr_vrect.y);
-	Render2D_AddDirtyPoint (scr_vrect.x+scr_vrect.width-1,
-		scr_vrect.y+scr_vrect.height-1);
+	Render2D_AddDirtyPoint(scr_vrect.x, scr_vrect.y);
+	Render2D_AddDirtyPoint(scr_vrect.x + scr_vrect.width - 1,
+		scr_vrect.y + scr_vrect.height - 1);
 
-	Render2D_DrawCrosshair ();
+	Render2D_DrawCrosshair();
 }
 
 /*
 =============
-V_Init
+Render3D_Init
+
+Initialises stuff that interfaces with the 3d rendering 
 =============
 */
-void Render3D_Init ()
+void Render3D_Init()
 {
-	Cmd_AddCommand ("gun_next", Render3D_Gun_Next_f);
-	Cmd_AddCommand ("gun_prev", Render3D_Gun_Prev_f);
-	Cmd_AddCommand ("gun_model", Render3D_Gun_Model_f);
+	Cmd_AddCommand("gun_next", Render3D_Gun_Next_f);
+	Cmd_AddCommand("gun_prev", Render3D_Gun_Prev_f);
+	Cmd_AddCommand("gun_model", Render3D_Gun_Model_f);
 
-	crosshair = Cvar_Get ("crosshair", "0", CVAR_ARCHIVE);
+	crosshair = Cvar_Get("crosshair", "0", CVAR_ARCHIVE);
 }
